scrollbar fix

--- a/src/Components/Cards/DetailedCard.css
+++ b/src/Components/Cards/DetailedCard.css
@@ -43,6 +43,10 @@
   display: none;
 }
 
+.tab-content::-webkit-scrollbar {
+  display: none;
+}
+
 .tab-content {
   overflow-y: scroll;
 }
